[gd_scene load_steps=2 format=2]

[ext_resource path="res://creatures/player/abilities/shoot_action.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="RayCastTop" type="RayCast2D" parent="."]
position = Vector2( 0, -20 )
enabled = true
cast_to = Vector2( 100000, 0 )
collision_mask = 3
collide_with_areas = true

[node name="RayCastCenter" type="RayCast2D" parent="."]
position = Vector2( 0, -5 )
enabled = true
cast_to = Vector2( 100000, 0 )
collision_mask = 3
collide_with_areas = true

[node name="RayCastBottom" type="RayCast2D" parent="."]
position = Vector2( 0, 10 )
enabled = true
cast_to = Vector2( 100000, 0 )
collision_mask = 3
collide_with_areas = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
